0.028 2024-12-13
  [Bug Fix]
    * Fix bugs of Net::SSLeay#get_SSL_CTX method.
    * Fix bugs of Net::SSLeay#set_SSL_CTX method.
  [Test Improvement]
    * Online tests are skipped in offline systems.
  [Changes]
    * $type argument of Net::SSLeay::SSL_CTX#use_certificate_file method becomes optional.
    * $type argument of Net::SSLeay::SSL_CTX#use_PrivateKey_file method becomes optional.
  [New Features]
    * Add SSL_ERROR_WANT_WRITE class.
    * Add SSL_ERROR_WANT_READ class.
    
0.027 2024-12-12
  [New Features]
    * Add Net::SSLeay::SSL_CTX#set_alpn_select_cb method.
  [Incompatibe Changes]
    * Remove Net::SSLeay::SSL_CTX#set_next_proto_select_cb method.
    * Remove Net::SSLeay::SSL_CTX#set_next_proto_select_cb_with_protocols method.
    * Remove Net::SSLeay::SSL_CTX#set_next_protos_advertised_cb_with_protocols method.
    * Remove Net::SSLeay::SSL_CTX#set_tlsext_servername_callback method.
    * Remove Net::SSLeay::SSL_CTX#set_psk_client_callback method.
    * Remove Net::SSLeay::SSL_CTX#set_psk_server_callback method.
    * Remove Net::SSLeay::SSL_CTX#set_tlsext_ticket_key_cb method.
    * Remove Net::SSLeay::SSL_CTX#sess_set_new_cb method.
    * Remove Net::SSLeay::SSL_CTX#sess_remove_new_cb method.
    * Remove Net::SSLeay::SSL_CTX#get_session_cache_mode method.
    * Remove Net::SSLeay::SSL_CTX#set_session_cache_mode method.
    * Remove Net::SSLeay::SSL_CTX#set_session_id_context method.
    * Remove Net::SSLeay::Callback::TlsextTicketKey class.
    * Remove Net::SSLeay::Callback::TlsextStatus class.
    * Remove Net::SSLeay::Callback::RemoveSession class.
    * Remove Net::SSLeay::Callback::PskServer class.
    * Remove Net::SSLeay::Callback::PskClient class.
    * Remove Net::SSLeay::Callback::NewSession class.
    * Remove Net::SSLeay::Callback::NextProtoSelect class.
    * Remove Net::SSLeay::Callback::NextProtosAdvertised class.
    * Remove Net::SSLeay::HMAC_CTX class.
    * Remove Net::SSLeay::EC_KEY class.