@@ -38,11 +38,133 @@ class TestCase::Net::SSLeay {
   use Net::SSLeay::X509_STORE;
   
   use TestUtil::Socket;
+  use Sys::Socket::Constant as SOCKET;
   
   our $FILE_DIR : string;
   
   INIT {
     $FILE_DIR = FindBin->Bin . "/file";
+  }
+  
+  static method run_echo_server_accept_once : void ($port : int) {
+    
+    my $localhost = "127.0.0.1";
+    
+    my $server_socket = TestUtil::Socket->new({
+      LocalAddr => $localhost,
+      LocalPort => $port,
+      Listen    => 5,
+      ReuseAddr => 1,
+    });
+    
+    my $ssl = $server_socket->ssl;
+    
+    my $ssl_ctx = $ssl->get_SSL_CTX;
+    
+    $ssl_ctx->use_PrivateKey_file("$FILE_DIR/simple-cert.key.pem");
+    
+    $ssl_ctx->use_certificate_file("$FILE_DIR/simple-cert.cert.pem");
+    
+    my $client_socket = $server_socket->accept;
+    
+    $client_socket->accept_SSL;
+    
+    while (1) {
+      
+      my $data = (mutable string)new_string_len 1;
+      
+      my $read_length = $client_socket->read($data);
+      
+      if ($read_length > 0) {
+        $client_socket->write($data);
+      }
+      else {
+        last;
+      }
+    }
+  }
+  
+  static method accept : int ($port : int) {
+    
+    my $success_ref = [1];
+    
+    my $wg = Go::Sync::WaitGroup->new;
+    
+    $wg->add(2);
+    
+    # Run a echo server
+    my $go_server_ref = [0];
+    Go->go([$go_server_ref : int[], $wg : Go::Sync::WaitGroup, $port : int] method : void () {
+      
+      $go_server_ref->[0] = 1;
+      
+      &run_echo_server_accept_once($port);
+      
+      $wg->done;
+    });
+    
+    # Tests
+    my $go_tests_ref = [0];
+    Go->go([$go_tests_ref : int[], $wg : Go::Sync::WaitGroup, $success_ref : int[], $port : int] method : void () {
+      
+      $go_tests_ref->[0] = 1;
+      
+      {
+        my $host = "127.0.0.1";
+        my $socket = TestUtil::Socket->new({PeerAddr => $host, PeerPort => $port});
+        
+        my $ssl = $socket->ssl;
+        
+        my $ssl_ctx = $ssl->get_SSL_CTX;
+        
+        $ssl_ctx->set_verify(SSL->SSL_VERIFY_NONE);
+        
+        $socket->connect_SSL;
+        
+        my $send_buffer = "abc\n";
+        
+        $socket->write($send_buffer);
+        
+        $socket->shutdown(SOCKET->SHUT_WR);
+        
+        my $string_buffer = StringBuffer->new;
+        
+        my $recv_buffer = (mutable string)new_string_len 1;
+        
+        while (1) {
+          
+          my $recv_length = $socket->recv($recv_buffer);
+          
+          if ($recv_length > 0) {
+            $string_buffer->push($recv_buffer);
+          }
+          
+          if ($recv_buffer eq "\n") {
+            last;
+          }
+        }
+        
+        unless ($string_buffer->to_string eq "abc\n") {
+          $success_ref->[0] = 0;
+        }
+      }
+      
+      $wg->done;
+    });
+    
+    Go->gosched;
+    
+    $wg->wait;
+    
+    unless ($go_server_ref->[0]) {
+      return 0;
+    }
+    
+    unless ($go_tests_ref->[0]) {
+      return 0;
+    }
+    
+    return $success_ref->[0];
   }
   
   static method ASN1_ENUMERATED : int () {
