@@ -7,6 +7,7 @@
   [Changes]
     * $type argument of Net::SSLeay::SSL_CTX#use_certificate_file method becomes optional.
     * $type argument of Net::SSLeay::SSL_CTX#use_PrivateKey_file method becomes optional.
+    * Net::SSLeay::Error::SSL_ERROR_WANT_READ and Net::SSLeay::Error::SSL_ERROR_WANT_WRITE are thrown in connect_SSL, accept_SSL, write, read, shutdown methods in Net::SSLeay class.
   [New Features]
     * Add SSL_ERROR_WANT_WRITE class.
     * Add SSL_ERROR_WANT_READ class.
